# flask-celery-mail

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.toml  worker.py
flaskcelerymail/: app.py
flaskcelerymail/ext/api/: __init__.py
flaskcelerymail/ext/api/blueprints/: __init__.py
flaskcelerymail/ext/api/routes/: api.py  site.py
flaskcelerymail/ext/api/views/: api.py
flaskcelerymail/ext/celery/: __init__.py  celery.py
flaskcelerymail/ext/celery/tasks/: tasks.py
flaskcelerymail/ext/hooks/: __init__.py
flaskcelerymail/ext/mail/: email.py
flaskcelerymail/static/css/: app.044589a8.css  app.7329e4a8.css  app.7d2a868e.css
flaskcelerymail/static/js/: about.e9a67409.js  about.e9a67409.js.map  app.0abd4200.js  app.0abd4200.js.map  app.2f67599b.js  app.2f67599b.js.map  app.55bd004c.js  app.55bd004c.js.map  app.8ef364a5.js  app.8ef364a5.js.map  app.f44f5187.js  app.f44f5187.js.map  chunk-vendors.2e5637a4.js  chunk-vendors.2e5637a4.js.map  chunk-vendors.8fdcc2bf.js  chunk-vendors.8fdcc2bf.js.map  emails.2e921ad8.js  emails.2e921ad8.js.map
flaskcelerymail/templates/: index.html
frontendvue/: package-lock.json  package.json  vue.config.js  vue.config.js.txt
frontendvue/src/: App.vue  main.js
frontendvue/src/components/: FormsComponent.vue
frontendvue/src/router/: index.js
frontendvue/src/views/: EmailsView.vue  HomeView.vue
tests/: test_flaskcelerymail.py
