[tool.poetry]
name = "flaskcelerymail"
version = "0.1.0"
description = ""
authors = ["AndreAmorim05 <js.andreamorim.eng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
celery = "^5.2.3"
redis = "^4.2.0"
dynaconf = "^3.1.7"
Flask-Mail = "^0.9.1"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
